--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <title>Todo List</title>
-</head>
-<body>
-    
-    <header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Todo List</title>
+        <link
+        href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+        rel="stylesheet"
+        />
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+        integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+        crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="./style.css" />
+    </head>
+    <body>
+        <header>
         <h1>Martin's Todo List</h1>
-    </header>
-    <form>
-        <input type="text" class="todo-input">
+        </header>
+        <form>
+        <input type="text" class="todo-input" />
         <button class="todo-button" type="submit">
             <i class="fas fa-plus-square"></i>
         </button>
-    </form>
-    <div class="todo-container">
+        <div class="select">
+            <select name="todos" class="filter-todo">
+            <option value="all">All</option>
+            <option value="completed">Completed</option>
+            <option value="uncompleted">Uncompleted</option>
+            </select>
+        </div>
+        </form>
+        <div class="todo-container">
         <ul class="todo-list"></ul>
-    </div>
+        </div>
 
-
-
-    <script src="./app.js"></script>
-</body>
+        <script src="./app.js"></script>
+    </body>
 </html>
